<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
      	android:paddingTop="10dp"
      	android:paddingLeft="10dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/tweet_image_profile_description"
        android:src="@drawable/ic_launcher" />
    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      	android:paddingTop="10dp"
      	android:paddingLeft="5dp" 
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/user_name_placeholder" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_below="@+id/tvUserName"
      	android:paddingLeft="5dp"
      	android:paddingRight="10dp"
      	android:paddingBottom="10dp"
    	android:autoLink="all"
     	android:linksClickable="true"
        android:text="@string/tweet_body_placeholder" />

    <TextView
        android:id="@+id/tvCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      	android:paddingRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/created_placeholder" />

</RelativeLayout>
