<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tonytcleung.twitter.activities.ProfileActivity" >

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">
        
        <ImageView 
            android:id="@+id/ivProfileImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
        	android:layout_alignParentTop="true"
        	android:layout_marginRight="10dp"
        	android:contentDescription="@string/tweet_image_profile_description"
        	android:src="@android:drawable/screen_background_light_transparent"/>
        
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:text="@string/first_name_placeholder"
            android:textSize="16sp"/>
        
        <TextView
            android:id="@+id/tvTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_alignLeft="@+id/tvName"
            android:text="@string/tag_line_placeholder"
            android:textSize="12sp"/>
     </RelativeLayout>
    
    <LinearLayout 
        android:id="@+id/llCounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlHeader"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_followers"/>
        
        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/profile_following"/>
    </LinearLayout>
    
    <fragment
        android:id="@+id/fragmentUserTimeline"
        android:name="com.tonytcleung.twitter.fragments.UserTimelineFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/llCounts"
        tools:layout="@layout/fragment_tweets_list" />

</RelativeLayout>
